2008-08-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Support "E-prefixing" for `pgtable-manager' SQL quoting.

	* postgres-table.scm: From module (database postgres),
	also select `pg-result-status'.
	(pgtable-manager): Don't use `sql-quote' directly; instead, init
	at closure-creation time the SQL-quoting procedure that wraps
	`sql-quote' to a variant that does "E-prefixing" if the supported
	by the backend.

2008-08-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres-resx) proc: object<-result

	* postgres-resx.scm (object<-result): New proc, exported.

2008-08-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Hide `compile-outspec' implementation details.

	* postgres-table.scm (compiled-outspec?): New object property.
	(compile-outspec): Replace `(cons compiled-outspec RV)'
	marking with setting of property `compile-outspec?'.
	(compiled-outspec?-extract): Rewrite.

2008-08-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	For `pgtable-manager', validate INSERT column counts.

	* postgres-table (pgtable-manager check-col-count): New proc.
	(pgtable-manager insert-values): Use `check-col-count'.
	(pgtable-manager insert-col-values): Likewise.

2008-08-07  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Make `pgtable-manager' INSERT commands faster.

	* postgres-table.scm (pgtable-manager):
	compute number of columns and type names once.
	(pgtable-manager serial?): Incorporate intneral proc into unique caller.
	(pgtable-manager qstring<-colname): Likewise.
	(pgtable-manager insert-variant): Delete internal proc.
	(pgtable-manager do-insert): New internal proc.
	(pgtable-manager insert-values): Likewise.
	(pgtable-manager insert-col-values): Likewise.
	(pgtable-manager insert-alist): Likewise.
	(pgtable-manager die!): No longer treat `insert-alist',
	`insert-col-values' and `insert-values' dynamically.

2008-08-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Debogify: Make `pgtable-manager' INSERTs no longer strip `serial' cols.
